update voucher deploy

--- a/src/pages/Order/Order.module.scss
+++ b/src/pages/Order/Order.module.scss
@@ -31,7 +31,7 @@
         color: #666;
 
         & .tag {
-          background: #EE6983;
+          background: #ee6983;
           color: #fff;
           font-size: 12px;
           padding: 5px 10px;
@@ -40,17 +40,17 @@
         }
 
         & .change {
-            margin-left: auto;
-            font-size: 16px;
-            color: #EE6983;
-            cursor: pointer;
+          margin-left: auto;
+          font-size: 16px;
+          color: #ee6983;
+          cursor: pointer;
         }
 
         & p {
           flex-basis: 100%;
           margin: 4px 0 0;
           font-size: 13px;
-          color: #AEACAC;
+          color: #aeacac;
         }
       }
 
@@ -60,130 +60,157 @@
         justify-content: space-between;
 
         & label {
-            font-size: 16px;
-            color: #837D92;
-            display: flex;
-            align-items: center;
-            gap: 8px;
+          font-size: 16px;
+          color: #837d92;
+          display: flex;
+          align-items: center;
+          gap: 8px;
 
-            & input[type="checkbox"] {
-                margin: 0;
-                accent-color: #ee6983;
-            }
+          & input[type="checkbox"] {
+            margin: 0;
+            accent-color: #ee6983;
+          }
         }
 
         & .change {
-            font-size: 16px;
-            color: #EE6983;
-            cursor: pointer;            
+          font-size: 16px;
+          color: #ee6983;
+          cursor: pointer;
         }
       }
 
-      & .voucher {
+      .voucher {
         display: flex;
         align-items: center;
         padding: 8px 0;
         border-radius: 4px;
         font-weight: 500;
 
-        & img {
+        input {
+          width: 30%;
+          padding: 8px 12px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          font-size: 15px;
+          outline: none;
           margin-right: 8px;
         }
-        & .change {
+
+        .applyButton {
+          padding: 8px 16px;
+          background-color: #ee6983;
+          color: #fff;
+          border: none;
+          border-radius: 4px;
+          font-size: 15px;
+          cursor: pointer;
+          margin-right: 8px;
+          transition: background-color 0.3s;
+
+          &:hover {
+            background-color: #d75c76;
+          }
+        }
+
+        img {
+          margin-right: 8px;
+        }
+
+        .change {
           margin-left: auto;
           font-size: 16px;
-          color: #EE6983;
+          color: #ee6983;
           cursor: pointer;
         }
       }
     }
 
     .shipping_info {
-        padding: 16px;
-        h3 {
-            font-size: 22px;
-            font-weight: 500;
-            margin-bottom: 12px;
+      padding: 16px;
+      h3 {
+        font-size: 22px;
+        font-weight: 500;
+        margin-bottom: 12px;
+        color: #666;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+      }
+
+      .shipping_options {
+        display: flex;
+        gap: 12px;
+        flex-wrap: wrap;
+      }
+
+      .shipping_item {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        border: 1px solid #f75c8a;
+        border-radius: 6px;
+        padding: 8px 12px;
+        cursor: pointer;
+        min-width: 250px;
+        transition: all 0.2s ease;
+        background: #fff;
+
+        input[type="checkbox"] {
+          appearance: none;
+          width: 18px;
+          height: 18px;
+          border: 1.5px solid #aeacac;
+          border-radius: 4px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          cursor: pointer;
+
+          &:checked {
+            background-color: #f75c8a;
+            background-image: url("../../assets/images/check.png");
+            background-repeat: no-repeat;
+            background-position: center;
+          }
+        }
+
+        div {
+          display: flex;
+          flex-direction: column;
+
+          strong {
+            color: #e90040;
+            font-size: 14px;
+          }
+
+          p {
+            font-size: 13px;
             color: #666;
-            display: flex;
-            align-items: center;
-            gap: 5px;
+            margin: 2px 0 0;
+          }
         }
 
-        .shipping_options {
-            display: flex;
-            gap: 12px;
-            flex-wrap: wrap;
+        .price_tag {
+          margin-left: auto;
+          background: #fecfd5;
+          color: #444;
+          border-radius: 12px;
+          padding: 2px 8px;
+          font-size: 12px;
         }
 
-        .shipping_item {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            border: 1px solid #F75C8A;
-            border-radius: 6px;
-            padding: 8px 12px;
-            cursor: pointer;
-            min-width: 250px;
-            transition: all 0.2s ease;
-            background: #fff;
+        &.active {
+          background: #fff0f4;
+          border-color: #f75c8a;
 
-            input[type="checkbox"] {
-            appearance: none;
-            width: 18px;
-            height: 18px;
-            border: 1.5px solid #AEACAC;
-            border-radius: 4px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-
-            &:checked {
-                background-color: #F75C8A;
-                background-image: url('../../assets/images/check.png');
-                background-repeat: no-repeat;
-                background-position: center;
-            }
-            }
-
-            div {
-            display: flex;
-            flex-direction: column;
-
-            strong {
-                color: #E90040;
-                font-size: 14px;
-            }
-
-            p {
-                font-size: 13px;
-                color: #666;
-                margin: 2px 0 0;
-            }
-            }
-
-            .price_tag {
-                margin-left: auto;
-                background: #FECFD5;
-                color: #444;
-                border-radius: 12px;
-                padding: 2px 8px;
-                font-size: 12px;
-            }
-
-            &.active {
-                background: #FFF0F4;
-                border-color: #F75C8A;
-
-            strong {
-                color: #E90040;
-            }
+          strong {
+            color: #e90040;
+          }
         }
-        }
+      }
     }
 
-        & .cart_item {
+    & .cart_item {
       display: flex;
       align-items: center;
       padding: 15px 0;
@@ -219,9 +246,9 @@
           color: #999;
           display: block;
           width: fit-content;
-          background-color: #FFE7E7;
+          background-color: #ffe7e7;
           padding: 2% 2%;
-          margin-bottom: 2%
+          margin-bottom: 2%;
         }
 
         & .actions {
@@ -252,46 +279,46 @@
         height: 40px;
 
         & button {
-            flex: 0 0 40px;
-            height: 100%;
-            border: none;
-            background: #fff;
-            font-size: 20px;
-            color: #4a405a;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: background 0.2s;
+          flex: 0 0 40px;
+          height: 100%;
+          border: none;
+          background: #fff;
+          font-size: 20px;
+          color: #4a405a;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          transition: background 0.2s;
 
-            &:hover {
+          &:hover {
             background: #fce4ec;
-            }
+          }
         }
 
         & input {
-            flex: 1;
-            height: 100%;
-            border: none;
-            text-align: center;
-            font-size: 18px;
-            color: #f06292;
-            outline: none;
-            width: 45px;
+          flex: 1;
+          height: 100%;
+          border: none;
+          text-align: center;
+          font-size: 18px;
+          color: #f06292;
+          outline: none;
+          width: 45px;
 
-            &[type="number"]::-webkit-outer-spin-button,
-            &[type="number"]::-webkit-inner-spin-button {
+          &[type="number"]::-webkit-outer-spin-button,
+          &[type="number"]::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
-            }
+          }
         }
 
         & button:first-child {
-            border-right: 1px solid #e0e0e0;
+          border-right: 1px solid #e0e0e0;
         }
 
         & button:last-child {
-            border-left: 1px solid #e0e0e0;
+          border-left: 1px solid #e0e0e0;
         }
       }
 
@@ -301,18 +328,18 @@
         font-weight: bold;
         text-align: right;
         font-size: 22px;
-        font-family: 'Inter', sans-serif;
+        font-family: "Inter", sans-serif;
       }
     }
 
     .note_total {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 48px;
-    margin: 12px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 48px;
+      margin: 12px 0;
 
-    .note_input {
+      .note_input {
         width: 50%;
         height: 72px;
         background-color: #fff4f4;
@@ -325,11 +352,11 @@
         line-height: 1.4;
 
         &::placeholder {
-        color: #999;
+          color: #999;
         }
-    }
+      }
 
-    .total_price {
+      .total_price {
         width: 50%;
         display: flex;
         align-items: center;
@@ -337,125 +364,124 @@
         gap: 16px;
 
         .label {
-            font-size: 22px;
-            color: #666;
+          font-size: 22px;
+          color: #666;
         }
 
         .price {
-            color: #e10000;
-            font-weight: bold;
-            text-align: right;
-            font-size: 22px;
-            font-family: "Inter", sans-serif;
+          color: #e10000;
+          font-weight: bold;
+          text-align: right;
+          font-size: 22px;
+          font-family: "Inter", sans-serif;
         }
       }
     }
 
     & .policy_note {
-        font-size: 14px;
-        color: #AEACAC;
-        line-height: 1.5;
+      font-size: 14px;
+      color: #aeacac;
+      line-height: 1.5;
     }
-
   }
 
   & .right {
     width: 320px;
 
     & .order_btn {
-        width: 100%;
-        padding: 12px;
-        background: #EE6983;
-        color: #fff;
-        font-size: 16px;
-        border-radius: 6px;
-        border: none;
-        margin-bottom: 16px;
-        cursor: pointer;
+      width: 100%;
+      padding: 12px;
+      background: #ee6983;
+      color: #fff;
+      font-size: 16px;
+      border-radius: 6px;
+      border: none;
+      margin-bottom: 16px;
+      cursor: pointer;
 
-        &:hover {
-            background-color: #ec407a;
-        }
+      &:hover {
+        background-color: #ec407a;
+      }
     }
 
     & .summary {
-        background: #fff;
-        border-radius: 8px;
-        padding: 16px 0;
-        box-shadow: 0 2px 5px rgba(255, 105, 135, 0.08);
+      background: #fff;
+      border-radius: 8px;
+      padding: 16px 0;
+      box-shadow: 0 2px 5px rgba(255, 105, 135, 0.08);
 
-        & h4 {
-            display: flex;
-            justify-content: space-between;
-            font-size: 20px;
-            font-weight: 500;
-            margin-bottom: 12px;
-            color: #EE6983;
-            align-items: center;
-            margin-top: 0;
+      & h4 {
+        display: flex;
+        justify-content: space-between;
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 12px;
+        color: #ee6983;
+        align-items: center;
+        margin-top: 0;
 
-            & span {
-                font-size: 14px;
-            }
+        & span {
+          font-size: 14px;
+        }
+      }
+
+      & .line_item {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+        color: #666;
+
+        & span {
+          font-size: 14px;
         }
 
-        & .line_item {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-            color: #666;
+        & .number {
+          color: #000;
+        }
+      }
 
-            & span {
-                font-size: 14px;
-            }
+      & .divider {
+        border-bottom: 1px solid #fecfd5;
+        margin: 12px 0;
+      }
 
-            & .number {
-                color: #000;
-            }
+      & .total {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 10px;
+        align-items: center;
+        border-top: 1px solid;
+
+        & .total_span_1 {
+          font-weight: 500;
+          color: #ee6983;
+          font-size: 14px;
         }
 
-        & .divider {
-            border-bottom: 1px solid #FECFD5;
-            margin: 12px 0;
+        & .total_span_2 {
+          font-size: 20px;
+          color: red;
         }
+      }
 
-        & .total {
-            display: flex;
-            justify-content: space-between;
-            padding-top: 10px;
-            align-items: center;
-            border-top: 1px solid;
+      .note_1 {
+        font-size: 12px;
+        color: #666;
+        text-align: left;
+        margin: 2px 0;
+      }
+      .note_2 {
+        font-size: 12px;
+        color: #aeacac;
+        text-align: left;
+        margin: 2px 0;
+      }
 
-            & .total_span_1 {
-                font-weight: 500;
-                color: #EE6983;
-                font-size: 14px;
-            }
-
-            & .total_span_2 {
-                font-size: 20px;
-                color: red;
-            }
-        }
-
-        .note_1 {
-            font-size: 12px;
-            color: #666;
-            text-align: left;
-            margin: 2px 0;
-        }
-        .note_2 {
-            font-size: 12px;
-            color: #AEACAC;
-            text-align: left;
-            margin: 2px 0;
-        }
-
-        .change {
-            color: #F75C8A;
-            font-size: 13px;
-            cursor: pointer;
-        }
+      .change {
+        color: #f75c8a;
+        font-size: 13px;
+        cursor: pointer;
+      }
     }
   }
 }
