--- a/src/components/MyOrder/MyOrder.module.scss
+++ b/src/components/MyOrder/MyOrder.module.scss
@@ -1,48 +1,46 @@
 .my_order {
   padding: 20px;
-  
 
-    .order_tabs {
-        display: flex;
-        gap: 20px;
-        margin-bottom: 25px;
-        padding: 16px;
-        padding-bottom: 0;
-        box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.08);
-        border-radius: 16px;
+  .order_tabs {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 25px;
+    padding: 16px;
+    padding-bottom: 0;
+    box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.08);
+    border-radius: 16px;
 
-        button {
-            background: transparent;
-            border: none;
-            font-weight: 500;
-            font-size: 16px;
-            cursor: pointer;
-            padding-bottom: 16px;
-            position: relative;
-            color: #333;
-            transition: all 0.3s;
+    button {
+      background: transparent;
+      border: none;
+      font-weight: 500;
+      font-size: 16px;
+      cursor: pointer;
+      padding-bottom: 16px;
+      position: relative;
+      color: #333;
+      transition: all 0.3s;
 
-            &::after {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            width: 0%;
-            height: 2px;
-            background-color: #ee6983;
-            transition: all 0.3s ease;
-            }
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 0%;
+        height: 2px;
+        background-color: #ee6983;
+        transition: all 0.3s ease;
+      }
 
-            &.active {
-                color: #ee6983;
+      &.active {
+        color: #ee6983;
 
-                &::after {
-                    width: 100%;
-                }
-            }
+        &::after {
+          width: 100%;
         }
+      }
     }
-
+  }
 
   .order_item {
     background: #fff;
@@ -50,6 +48,7 @@
     padding: 20px;
     box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.08);
     min-width: 1000px;
+    margin-bottom: 20px;
 
     .order_header {
       display: flex;
@@ -100,18 +99,18 @@
         .name_and_weight {
           width: -webkit-fill-available;
 
-            .name {
+          .name {
             font-weight: 500;
             color: #666;
             font-size: 18px;
-            word-wrap: break-word;  
+            word-wrap: break-word;
             white-space: normal;
             cursor: pointer;
-            }
+          }
 
-            p {
-                color: #AEACAC;
-            }
+          p {
+            color: #aeacac;
+          }
         }
 
         span {
@@ -122,7 +121,7 @@
         .price {
           color: #ee6983;
           font-weight: 500;
-          min-width: 100px;
+          min-width: 150px;
           text-align: right;
           font-size: 20px;
         }
@@ -137,11 +136,11 @@
 
       span {
         font-size: 20px;
-        color: #4E4663;
+        color: #4e4663;
       }
 
       .total_price {
-        color: #D40F13;
+        color: #d40f13;
         font-weight: 700;
         font-size: 22px;
       }
@@ -163,7 +162,7 @@
 
       .btn_review {
         background: #f5f5f5;
-        color: #F84A6C;
+        color: #f84a6c;
         font-size: 20px;
         padding: 0.5rem 3rem;
 
@@ -173,7 +172,7 @@
       }
 
       .btn_rebuy {
-        background: #EE6983;
+        background: #ee6983;
         color: #fff;
         font-size: 20px;
         padding: 0.5rem 3rem;
@@ -182,6 +181,52 @@
           background: #ec407a;
         }
       }
+    }
+  }
+
+  & .pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    margin-top: 30px;
+
+    & button,
+    span {
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+      color: #666;
+      padding: 8px 14px;
+      border-radius: 50%;
+      transition: all 0.3s;
+
+      &:hover {
+        background: #fce5e7;
+        color: #f15778;
+      }
+    }
+
+    & .active {
+      background: #f5b1b7;
+      color: #fff;
+      font-weight: 600;
+    }
+
+    & .disabled {
+      cursor: default;
+      color: #ccc;
+
+      &:hover {
+        background: none;
+        color: #ccc;
+      }
+    }
+
+    & .ellipsis {
+      padding: 0;
+      cursor: default;
     }
   }
 }
