--- a/src/components/NavLeft/NavLeft.module.scss
+++ b/src/components/NavLeft/NavLeft.module.scss
@@ -25,8 +25,17 @@
         object-fit: cover;
         border-radius: 50%;
       }
-    }
 
+      .uploadInput {
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+      }
+    }
 
     .info {
       display: flex;
@@ -87,7 +96,7 @@
           position: relative;
 
           &::before {
-            content: '';
+            content: "";
             position: absolute;
             left: 10%;
             width: 8px;
@@ -102,7 +111,7 @@
           position: relative;
 
           &::before {
-            content: '';
+            content: "";
             position: absolute;
             left: 10%;
             width: 8px;
